--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 /* HERO */
 .hero {
   background: linear-gradient(0deg, rgba(11, 94, 215, 0.12), rgba(11, 94, 215, 0.12)),
-              url('https://i.ibb.co/bMLmpL7d/unnamed.jpg') center/cover no-repeat;
+              url('https://i.ibb.co/Qvq3snft/Pngtree-yellow-green-islamic-background-vector-15826995.png') center/cover no-repeat;
   min-height: 60vh;
   display: flex;
   align-items: center;
@@ -150,3 +150,4 @@ header {
   transform: translateY(-4px);
   box-shadow: 0 8px 15px rgba(0, 128, 0, 0.2);
 }
+
