--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 
 .hero {
   background: linear-gradient(rgba(11, 94, 215, 0.15), rgba(11, 94, 215, 0.15)),
-              url('https://images.unsplash.com/photo-1588072432836-e10032774350?auto=format&fit=crop&w=1600&q=60')
+              url('https://i.ibb.co/6Czmgm4/Role-of-Islamic-Schools-1024x683.jpg')
               center/cover no-repeat;
   min-height: 80vh;
   display: flex;
@@ -211,6 +211,7 @@ header {
   border-radius: 8px;
   margin-top: 15px;    /* increase this value to move photo downward */
 }
+
 
 
 
